[project]
name = "small-asc"
description = "A small asynchronous Solr client"
version = "0.23.0"
authors = [{name = "Andrew Hankinson", email = "andrew.hankinson@rism.digital"}]
requires-python = '>=3.9,<4.0'
dependencies = ['orjson (>=3.9.15,<4.0.0)', 'aiohttp[speedups] (>=3.8.4,<4.0.0)', 'parsimonious (>=0.10.0,<0.11.0)', "httpx (>=0.28.1,<0.29.0)"]

[tool.poetry]
requires-poetry = '>=2.0,<3.0'

[tool.poetry.group.dev.dependencies]
ipython = "^8.4.0"
pytest-benchmark = "^4.0.0"
mypy = "^1.12.0"
pytest = "^8.3.3"
deptry = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pycodestyle warnings
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    ## Flake8 plugins
    "UP",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C",
    # flake8-django
    "DJ",
    # flake8-bandit
    "S",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    # Ignore Pycodestyle line-length warnings, (mainly long comments).
    "E501",
    # Ignore McCabe complexity (for now).
    "C901",
]
