[project]
name = "small-asc"
version = "0.27.0"
description = "A small asynchronous Solr client"
authors = [{ name = "Andrew Hankinson", email = "andrew.hankinson@rism.digital" }]
requires-python = ">=3.11,<4.0"
license = "MIT"
dependencies = [
    "orjson (>=3.9.15,<4.0.0)",
    "parsimonious (>=0.10.0,<0.11.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

[project.urls]
Repository = "https://github.com/rism-digital/small-asc"

[dependency-groups]
dev = [
    "ipython>=9.0.2,<10",
    "pytest-benchmark>=5.0.0,<6",
    "mypy>=1.12.0,<2",
    "pytest>=8.3.3,<9",
    "deptry>=0.23.0,<0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.package-data]
small-asc = ['py.typed']

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pycodestyle warnings
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    ## Flake8 plugins
    "UP",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C",
    # flake8-django
    "DJ",
    # flake8-bandit
    "S",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    # Ignore Pycodestyle line-length warnings, (mainly long comments).
    "E501",
    # Ignore McCabe complexity (for now).
    "C901",
]
